--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,3 @@
-body {
-  margin: 0;
-}
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -21,6 +17,7 @@ body {
   flex-direction: row;
   align-items: center;
   position: relative;
+  background-color: #f2f2f2;
   /* выше установили ограничения для секции */
 }
 
@@ -38,23 +35,24 @@ body {
 }
 
 .header__title {
-  width: 730px;
-  height: 64px;
+  max-width: 730px;
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
   margin: 0 0 0 64px;
-  
+  z-index: 2;
 }
 
 .header__subtitle {
-  width: 388px;
+  max-width: 388px;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
   position: absolute;
   bottom: 30px;
   left: 64px;
+  margin: 0;
+  z-index: 2;
 }
 
 .header__link {
@@ -98,6 +96,9 @@ body {
 .two-columns__main-text {
   width: 80%;
   min-width: 784px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 30px;
 }
 
 .two-columns__brief {
@@ -116,9 +117,7 @@ body {
   font-weight: normal;
 }
 
-.two-columns__paragraph_place_center {
-  margin: 30px 0;
-}
+
 
 .two-columns__span-accent {
   line-height: 34px;
@@ -128,7 +127,6 @@ body {
 
 .digits {
   margin-top: 100px;
-  margin-bottom: 100px;
 }
 
 .section-title {
@@ -160,6 +158,8 @@ body {
 .table__cell {
   width: 250px;
   margin-top: 60px;
+  display: flex;
+  flex-direction: column;
 }
 
 .table__heading {
@@ -173,24 +173,27 @@ body {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin: 20px 0 0;
-}
-
-.table__text_place_down {
+  row-gap: 20px;
   margin: 20px 0 0;
 }
 
 .feynman {
   min-height: 890px;
   position: relative;
- 
+  background-color: #f2f2f2;
+  margin-top: 100px;
+  background-image: url(../images/feynman.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
 }
 
 .feynman__title {
+  max-width: 648px;
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
-  margin: 0 auto;
+  margin: 0 auto 70px;
+  padding-top: 100px;
   text-align: center;
 }
 
@@ -198,7 +201,7 @@ body {
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
-  margin: 70 px 0;
+  margin: 0;
   text-align: center;
 }
 
@@ -218,6 +221,7 @@ body {
   position: absolute;
   top: 445px;
   right: 48px;
+  text-decoration: none;
 }
 
 .kaufman {
@@ -233,6 +237,7 @@ body {
   font-weight: 600;
   margin: 90px auto 20px;
   color: white;
+  z-index: 1;
 }
 
 .section-subtitle_theme_dark {
@@ -241,10 +246,12 @@ body {
   font-size: 24px;
   font-weight: normal;
   color: white;
+  z-index: 1;
 }
 
 .table_theme_dark {
   margin: 0 auto 90px;
+  z-index: 1;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -267,6 +274,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   z-index: 0;
+  overflow: hidden;
 }
 
 .footer {
@@ -275,6 +283,7 @@ body {
   box-sizing: border-box;
   padding-top: 60px;
   padding-bottom: 40px;
+  display: flex;
 }
 
 .footer__columns {
@@ -329,6 +338,7 @@ body {
 .footer__social-icon {
   width: 16px;
   height: 16px;
+  margin-right: 10px;
 }
 
 
