--- a/blocks/oakley/oakley.css
+++ b/blocks/oakley/oakley.css
@@ -1,6 +1,7 @@
 .oakley {
-    margin-top: 160px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #f2f2f2;
+    padding-top: 160px;
 }
