--- a/blocks/resources/__link/resources__link.css
+++ b/blocks/resources/__link/resources__link.css
@@ -1,4 +1,8 @@
 .resources__link {
     text-decoration: none;
-    flex-basis: 275px;
+    transition: opacity 0.5s linear;
+}
+
+.resources__link:hover {
+    opacity: 0.5;
 }
