--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -2,4 +2,8 @@
     margin-top: 50px;
     display: flex;
     justify-content: center;
+    list-style: none;
+    padding: 0;
+    position: relative;
+    top: 70px;
 }
