--- a/blocks/feynman/feyman.css
+++ b/blocks/feynman/feyman.css
@@ -2,7 +2,7 @@
     min-height: 890px;
     position: relative;
     background-color: #f2f2f2;
-    margin-top: 100px;
+    padding-top: 100px;
     background-image: url(../../images/feynman.png);
     background-repeat: no-repeat;
     background-position: left bottom;
