--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -3,5 +3,5 @@
     height: 608px;
     margin-right: 48px;
     object-fit: cover;
-    object-position: left bottom;
+    object-position: left top;
 }
